--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
-  "dependencies": {
-    "express": "^4.19.2",
-    "path": "^0.12.7"
-  }
+    "scripts": {
+        "start": "node index.js"
+    },
+    "dependencies": {
+        "express": "^4.19.2",
+        "path": "^0.12.7"
+    }
 }
